P-02 : veritabanı baglantisi saglandi. crud islemler kontrol edildi

--- a/PATCHUB.AuthServer.Persistence/appsettings.json
+++ b/PATCHUB.AuthServer.Persistence/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings": {
-    "AuthServerConnection": "Data Source=94.73.170.52;Initial Catalog=u0433948_db0Auth;Persist Security Info=True;User ID=u0433948_p0Auth;Password=Gideon#_Pintobi@_1024;TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "AuthServerConnection": "Data Source=94.73.170.49;Initial Catalog=u2039126_01Auth;Persist Security Info=True;User ID=u2039126_AuthDb;Password=PATCHUB_Auth_Server2025!;TrustServerCertificate=True;",
+        "AppServerConnection": "Data Source=94.73.170.49;Initial Catalog=u2039126_02API;Persist Security Info=True;User ID=u2039126_APIDB;Password=PATCHUB_API_Server2025!;TrustServerCertificate=True;"
+    }
 }
 
