P-03 : startup duzenlemeleri yapildi. token ayarlari duzenlendi

--- a/PATCHUB.AuthServer.Application/PATCHUB.AuthServer.Application.csproj
+++ b/PATCHUB.AuthServer.Application/PATCHUB.AuthServer.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
+    <Reference Include="PATCHUB.SharedLibrary">
+      <HintPath>..\..\..\..\inetpub\PATCHUB.SharedLibrary\PATCHUB.SharedLibrary\bin\Debug\net8.0\PATCHUB.SharedLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
