P-05 : ContactRequest landingpage bana ulasin servisi eklendi.

--- a/PATCHUB.AuthServer.API/PATCHUB.AuthServer.API.csproj
+++ b/PATCHUB.AuthServer.API/PATCHUB.AuthServer.API.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Reference Include="PATCHUB.SharedLibrary">
-      <HintPath>..\..\..\..\inetpub\PATCHUB.SharedLibrary\PATCHUB.SharedLibrary\bin\Debug\net8.0\PATCHUB.SharedLibrary.dll</HintPath>
+      <HintPath>..\..\PATCHUB.SharedLibrary\PATCHUB.SharedLibrary\bin\Debug\net8.0\PATCHUB.SharedLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
 
