--- a/PATCHUB.AuthServer.Infrastructure/PATCHUB.AuthServer.Infrastructure.csproj
+++ b/PATCHUB.AuthServer.Infrastructure/PATCHUB.AuthServer.Infrastructure.csproj
@@ -19,7 +19,7 @@
 
   <ItemGroup>
     <Reference Include="PATCHUB.SharedLibrary">
-      <HintPath>..\..\..\..\inetpub\PATCHUB.SharedLibrary\PATCHUB.SharedLibrary\bin\Debug\net8.0\PATCHUB.SharedLibrary.dll</HintPath>
+      <HintPath>..\..\PATCHUB.SharedLibrary\PATCHUB.SharedLibrary\bin\Debug\net8.0\PATCHUB.SharedLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
 
