feature/P-07 : User auth ayarları yapıldı, generic repository async ayarları düzenlendi.

--- a/PATCHUB.AuthServer.API/PATCHUB.AuthServer.API.csproj
+++ b/PATCHUB.AuthServer.API/PATCHUB.AuthServer.API.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PATCHUB.AuthServer.Domain\PATCHUB.AuthServer.Domain.csproj" />
     <ProjectReference Include="..\PATCHUB.AuthServer.Infrastructure\PATCHUB.AuthServer.Infrastructure.csproj" />
     <ProjectReference Include="..\PATCHUB.AuthServer.Persistence\PATCHUB.AuthServer.Persistence.csproj" />
   </ItemGroup>
